Componentization initial